@@ -51,6 +51,8 @@
 			<li>default <input type="text" class="val" value="123" /></li>
 			<li>default (html) <span class="useHtml">123</span></li>
 			<li>symbol <span class="symbol">123</span></li>
+			<li>roundToDecimalPlace2Up <span class="roundToDecimalPlace2Up">124.5451</span></li>
+			<li>roundToDecimalPlace2Down <span class="roundToDecimalPlace2Down">124.554</span></li>
 			<li>roundToDecimalPlace3 <span class="roundToDecimalPlace3">123.000</span></li>
 			<li>roundToDecimalPlace0 <span class="roundToDecimalPlace0">124.00</span></li>
 			<li>roundToDecimalPlace1 <span class="roundToDecimalPlace1">123.9</span></li>
@@ -63,8 +65,6 @@
 			<li>roundOneUp <span class="roundOneUp">123.999</span></li>
 			<li>roundOneDown <span class="roundOneDown">-123.999</span></li>
 			<li>negativeBrackets <span class="negativeBrackets">(123)</span></li>
-			<li>dropDecimals <span class="dropDecimals">123.00</span></li>
-			<li>dropDecimals and roundDown <span class="dropDecimalsRounding">123.66</span></li>
 			<li>positiveFormat <span class="positiveFormat">123</span></li>
 			<li>negativeFormat <span class="negativeFormat">-123</span></li>
 			<li>issue2_doNotRound <span class="issue2_doNotRound">9.45</span></li>
